monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4047/A4047i.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4047;

grammar A4047i extends A4047h {
  E implements I;

  interface I = Foo*;

}
